# universal_manipulation_interface

./: README.md  pyproject.toml  run_slam_pipeline.py  setup_deps.sh
scripts_slam_pipeline/: 00_process_videos.py  01_extract_gopro_imu.py  02_create_map.py  03_batch_slam.py  04_detect_aruco.py  05_run_calibrations.py  06_generate_dataset_plan.py  07_generate_replay_buffer.py
