[project]
name = "umi-workspace"
version = "1.0.0"
description = "Universal Manipulation Interface Workspace"
requires-python = ">=3.9,<3.12"
dependencies = [
    "umi",
] # Dependencies managed in packages

[project.optional-dependencies]
train = ["diffusion_policy"]

[tool.uv.workspace]
members = ["packages/umi", "packages/diffusion_policy", "packages/gym-patched"]

[tool.uv.sources]
diffusion_policy = { workspace = true }
gym = { workspace = true }
umi = { workspace = true }

[tool.uv]
package = false
